# tasty-fail-fast

./: .travis.yml  LICENSE  README.md  changelog.md  stack.yaml  tasty-fail-fast.cabal
src/Test/Tasty/Ingredients/: FailFast.hs
test/: Main.hs
test/golden/: simple.tap
