name:                tasty-fail-fast
version:             0.0.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/MichaelXavier/tasty-fail-fast#readme
license:             MIT
license-file:        LICENSE
author:              Michael Xavier
maintainer:          michael@michaelxavier.net
copyright:           2015 Michael Xavier
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag lib-Werror
  default: False
  manual: True


library
  hs-source-dirs:      src
  exposed-modules:     Test.Tasty.Ingredients.FailFast
  build-depends:       base >= 4.7 && < 5
                     , tasty >= 0.10 && < 0.12
                     , stm >= 2.1
                     , containers >= 0.1.0.0
  default-language:    Haskell2010

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:     test
  default-language:   Haskell2010

  build-depends:    base
                  , tasty
                  , tasty-fail-fast
                  , tasty-hunit
                  , tasty-golden
                  , tasty-tap
                  , directory

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall


source-repository head
  type:     git
  location: https://github.com/MichaelXavier/tasty-fail-fast
